# one-click-demo

./: .env.example  Dockerfile  README.md  app.py  k6.js  pyproject.toml  requirements.txt
app/: 🏠_Home.py
deployment/node-red/: one-click-rollout.yaml
deployment/node-red/k8s-native/: deployment.yaml  ingress.yaml  kustomization.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
deployment/streamlit/: one-click-rollout.yaml
deployment/streamlit/k8s-native/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml  serviceaccount.yaml
